<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"> 
    <EditText
        android:id="@+id/editTextSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSend"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textColor="#000"
        android:maxLines="1"
        android:visibility="invisible"
        android:imeOptions="actionNone"
        android:background="@drawable/rect">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonWheel"
        android:background="@drawable/mouse_rect_selector"
        android:text="@string/buttonLeft" />

    <Button
        android:id="@+id/buttonRight"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/buttonLeft"
        android:layout_toRightOf="@+id/buttonWheel"
        android:background="@drawable/mouse_rect_selector"
        android:text="@string/buttonRight" />

    <Button
        android:id="@+id/buttonWheel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLeft"
        android:layout_alignBottom="@+id/buttonLeft"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mouse_rect_selector"
        android:text="@string/buttonWheel" />

    <ImageView
        android:id="@+id/iv_main_scroll"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/arrDown"
        android:src="@drawable/scroll"
        android:clickable="true" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextSend"
        android:layout_centerVertical="true"
        android:text="@string/buttonSend"
        android:textColor="#000"
        android:background="@drawable/rect_selector"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBoxLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSend"
        android:layout_alignBottom="@+id/buttonSend"
        android:layout_alignLeft="@+id/editTextSend"
        android:text="@string/checkBoxLive"
        android:background="@drawable/rect"
        android:textColor="#000"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:visibility="invisible" />

</RelativeLayout>